displaying banned working (need to fix spacing tho)

--- a/public/style.css
+++ b/public/style.css
@@ -257,14 +257,18 @@ body {
 }
 
 .banned-display {
+    display: flex;
+    flex-wrap: wrap;
+    /* display: grid;
+    grid-template-columns: 20px 20px 20px; */
     position: absolute;
     z-index: 1;
     border: 1px solid black;
     margin-top: 3rem;
     margin-left: 1.1rem;
     /* min-width: 7.4rem; */
-    min-width: 100px;
-    min-height: 10rem;
+    width: 100px;
+    height: 10rem;
     transition: transform 150ms ease-in-out;
 }
 
@@ -276,6 +280,12 @@ body {
     transform: translateX(-125px);
 }
 
+.banned-span {
+    font-size: .75rem;
+    color: grey;
+    padding-left: .25rem;
+}
+
 #banned-airlines-display {
     margin-left: .12rem;
 }
@@ -284,6 +294,11 @@ body {
     font-size: .75rem;
     color: grey;
     padding-left: .25rem;
+}
+
+.banned-placeholder.hide {
+    opacity: 0;
+    position: absolute;
 }
 
 #altitude-title {
